# openkoutsi

./: .dockerignore  .gitignore  ADMIN.md  AGENTS.md  DEPLOY.md  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  openapi.json  plan.md  pyproject.toml
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: alembic.ini  main.py
backend/docs/: plan.md
frontend/: .env.local  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/coverage/: api.ts.html  clover.xml  coverage-final.json  index.html  llm.ts.html  utils.ts.html
frontend/docs/: plan.md
frontend/src/: middleware.ts
openkoutsi/: fit.py  sport_matching.py  training_math.py  workout.py  zones.py
openkoutsi/workout_formats/: fit_debug.py  fit_workout.py
scripts/: deploy-backend.sh  deploy-frontend.sh  merge_activities.py
systemd/: openkoutsi-backend@.service  openkoutsi-bridge@.service  openkoutsi-frontend@.service  openkoutsi-wahoo-bridge@.service
tests/: conftest.py
tests/integration/: test_activities.py  test_athlete.py  test_auth.py  test_distance.py  test_goals.py  test_integrations.py  test_metrics.py  test_plan_push_wahoo.py  test_plans.py  test_power.py
tests/unit/: test_activity_workout_matcher.py  test_db_concurrency.py  test_distance_analysis.py  test_file_encryption.py  test_fit_workout_exporter.py  test_fit_workout_round_trip.py  test_llm_activity_analyzer.py  test_llm_ssrf.py  test_llm_workout_generator.py  test_metrics_engine.py  test_power_analysis.py  test_provider_sync.py  test_sport_matching.py  test_token_refresh.py  (+3 more)
(+183 files in other folders)
